# opengl-webrtc-streamer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Shader.h  encoder.cpp  main.cpp
Shaders/: Cube.fs
pusher/: main.cc
ref/: gl_ffmpeg.cc  rgb2h264.cpp
rtmp-pusher/: CMakeLists.txt  buffer_pusher.cpp  main.cc  ref1.cpp
rtmp-pusher/srs_doc/: notes.md
src/: CMakeLists.txt  Camera.h  bufferparser.cpp  bufferparser.h  common.h  encoder.cpp  encoder.h  h264fileparser.cpp  h264fileparser.hpp  helpers.hpp  main.cpp  rtc_publisher.cpp  rtc_publisher.h  rtmp_publisher.cpp  rtmp_publisher.h  scene.cpp  scene.h  stream.cpp  stream.hpp  streamer.cpp  streamer.h
test/: CMakeLists.txt  test.cpp
webrtc-demo/: notes.md
